--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "space-optiizer",
+  "name": "space-optimizer",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -16,21 +16,24 @@
     "@angular/common": "^19.0.5",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
-    "@angular/fire": "^18.0.1",
+    "@angular/fire": "^19.0.0-rc.4",
     "@angular/forms": "^19.0.0",
     "@angular/material": "^19.0.4",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
+    "@angular/pwa": "^19.0.6",
     "@angular/router": "^19.0.0",
+    "@angular/service-worker": "^19.0.0",
     "@ngrx/effects": "^19.0.0",
     "@ngrx/entity": "^19.0.0",
     "@ngrx/store": "^19.0.0",
     "@ngrx/store-devtools": "^19.0.0",
     "chart.js": "^4.4.7",
     "d3": "^7.9.0",
+    "idb": "^8.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "^0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.6",
