--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,6 +14,8 @@
     "standalone": true
   },
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "src/main.ts",
+    "src/polyfills.ts"
   ]
 }
