--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,9 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/polyfills.ts"
+  ]
 }
