--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngrx/store": "^19.0.0",
     "@ngrx/store-devtools": "^19.0.0",
     "chart.js": "^4.4.7",
+    "cors": "^2.8.5",
     "d3": "^7.9.0",
     "idb": "^8.0.1",
     "rxjs": "~7.8.0",
